--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,100 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: 'Courier New', Courier, monospace;
+  font-weight: bold;
+  
+
+}
+input,button{
+  appearance: none;
+  background: none;
+  border: none;
+  outline: none;
+}
+button{
+  float:right;
+}
+.App{
+  display: flex;
+  height: 100vh;
+  align-content: center;
+  justify-content: center;
+  background: white;
+  text-align: center;
+  padding-top: 10px;
+}
+form{
+  display: block;
+  position: relative;
+}
+form:after{
+  content: '';
+  display:block;
+  position:absolute;
+  top: -5px;
+  bottom: -5px;
+  left: -5px;
+  right: -5px;
+  z-index: -1;
+  background-color:#30075f ;
+
+}
+form .form-inner{
+  position: relative;
+  display:block;
+  background-color:rgb(255, 255, 255);
+  padding: 30px;
+  z-index:2;
+}
+form .form-inner h2{
+  color:black;
+  font-size: 28px;
+  font-weight: bolder;
+  margin-bottom: 30px;
+  
+}
+form .form-inner .form-group{
+display: block;
+width: 300px;
+margin-bottom: 15px;
+}
+.form-inner .form-group label{
+display:block;
+color:#666;
+font-size: 12px;
+margin-bottom: 5px;
+transition: 0.4s;
+}
+.form-inner .form-group :focus-within label{
+  color:#fe4880;
+
+}
+.form-inner .form-group input{
+display:block;
+width:100%;
+padding: 10px 15px;
+background-color: #f8f8f8;
+border-radius: 8px;
+transition: 0.4s;
+}
+form .form-inner .form-group input:focus{
+  box-shadow: 0px 0px 3px rgba(0, 0,0,.2);
+
+}
+form .form-inner input[type="submit"],.welcome button
+{
+
+  display: inline-block;
+  padding: 10px 15px;
+  border-radius: 8px;
+  background-size: 200;
+  background-color: #30075f;
+  background-position: 0%;
+  transition: 0.4s;
+  color:white;
+}
